--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,6 +9,58 @@ $font-color-label: #131022;
 
 
 // =============================================================================
+// Fonts
+// =============================================================================
+/* https://sass-lang.com/documentation/style-rules/declarations/ */
+
+/// 
+/// Manrope
+$font-family: "Manrope", sans-serif;
+$font-location-url: url("/src/assets/fonts/Manrope/Manrope-VariableFont_wght.ttf");
+$font-primary-style: normal;
+$font-optical-sizing: auto;
+$font-weight:(
+    'ExtraLight': 200,
+    'Light': 300,
+    'Medium': 500,
+    'SemiBold': 600,
+    'Bold': 700,
+    'ExtraBold': 800
+);
+
+/// @name links-color
+/// Specifying Colors for all links in the website
+/// @type Map
+/// @group Layout
+/// @example code-scss
+///   .element {
+///     font-color: map-get($map: $links-color, $key: 'link-nav');
+///   }
+$links-color:(
+    'link-nav' : #33354D
+);
+
+
+/// @name links-color
+/// Specifying Colors for all links in the website
+/// @type Map
+/// @group Layout
+/// @example code-scss
+///   .element {
+///     font-color: map-get($map: $links-color, $key: 'link-nav');
+///   }
+$font-family:(
+    'link-nav' : #33354D
+);
+
+
+
+
+
+
+
+
+// =============================================================================
 // Layout
 // =============================================================================
 
@@ -17,12 +69,10 @@ $font-color-label: #131022;
 /// Description of the variable
 /// @type number
 /// @access public
-/// @since 0.0.2
 /// @example code-scss
-///   $variableName: example-value; $variableName: value;
-/// @example code-css
-///   <div class="gradient-container">Content here</div>
-/// @requires {map} a.$content-width - Map with width values
+///   .element {
+///      width: map-get($map: $content-width, $key: 'full-width');
+///   }
 $content-width-percentage: (
     'full-width': 100%,
     'half-width': 50%
@@ -36,7 +86,7 @@ $content-width-percentage: (
 /// @access public
 /// @example code-scss
 ///   .element {
-///     display: map-get($display-type, 'flex');
+///      display: map-get($map: $display-type, $key: 'flex');
 ///   }
 $display-type: (
     'flex': flex,
@@ -49,13 +99,39 @@ $display-type: (
 /// Map of breakpoints regarding responsive
 /// @type Map
 /// @group Layout
-/// @access public
 /// @example code-scss
 ///   .element {
-///     display: map-get($breakpoints, 'flex');
-///   }
+///     media (min-width: display: map-get($map: $breakpoints, $key: 'medium')){
+///         background-color: red;
+///     }
 $breakpoints: (
     'medium': 768px,
     'xlarge': 1200px
-)
+);
 
+
+/// @name max-content
+/// Max content width values depending on device
+/// @type Map
+/// @group Layout
+/// @example code-scss
+///   .element {
+///     max-width: map-get($map: $max-content-width, $key: 'desktop');
+///   }
+$max-content-width: (
+    'desktop': 81.25rem,
+    'tablet': 48rem,
+    'mobile': 24.375rem
+);
+
+/// @name gaps
+/// Maps for different gaps size based on the layout
+/// @type Map
+/// @group Layout
+/// @example code-scss
+///   .element {
+///     gap: map-get($map: $gaps, $key: 'g-3-1');
+///   }
+$gaps:(
+    'g-3-1': 3.125em
+);
