Added more vars, added butn and radio to mixin and components

--- a/src/scss/abstracts/_functions.scss
+++ b/src/scss/abstracts/_functions.scss
@@ -2,7 +2,7 @@
 
 /// Inspired by https://sass-lang.com/documentation/values/functions/
 /// Description of function
-/// @param {string} $$parameter - String separated with comma
+/// @param {string} $parameter - String separated with comma
 /// @return {string} Return is an list of string with comma separation
 /// @group Layout
 /// @access public
