--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,3 +1,7 @@
+
+/// =============================================================================
+/// Layout
+/// =============================================================================
 /// @name container-query-wrapper
 /// @group Layout
 ///
@@ -23,7 +27,6 @@
   container-name: $container-name;
 }
 
-
 /// @name grid-auto-height
 /// @group Layout
 ///
@@ -37,7 +40,13 @@
 /// @param {List} $gah-display-map - Contains Map for display type from vars
 /// @example code-scss
 /// @include a.grid-auto-height(grid, a.grid-add-colum(1fr), 3, a.$display-type)
-@mixin grid-row-colum($gah-display-type-value, $gah-colums, $grid-row-repeat, $gah-display-map, $gah-row-height) {
+@mixin grid-row-colum(
+  $gah-display-type-value,
+  $gah-colums,
+  $grid-row-repeat,
+  $gah-display-map,
+  $gah-row-height
+) {
   display: map-get($map: $gah-display-map, $key: $gah-display-type-value);
   grid-template-columns: $gah-colums;
   grid-template-rows: $gah-row-height;
@@ -65,8 +74,7 @@
       /// Passing the content further
       @content;
     }
-  }
-  @else if $min {
+  } @else if $min {
     @container #{$container-name} (min-width: #{$min}) {
       /// Passing the content further
       @content;
@@ -84,14 +92,90 @@
 /// @example code-scss
 ///   @include content-width(81.25rem, 100%)
 /// }
-@mixin content-width($max-width, $width){
+@mixin content-width($max-width, $width) {
   max-width: $max-width;
   margin: 0 auto;
   width: $width;
 }
 
-
-@mixin flex($align-items){
+/// @name flex
+/// @group Layout
+///
+/// Telling it's flex and how to align it
+///
+/// @param {String} $max-width - Max width for the content
+/// @param {String} $width - With of the content
+/// @example code-scss
+///   @include content-width(81.25rem, 100%)
+/// }
+@mixin flex($align-items) {
   display: flex;
   align-items: $align-items;
+}
+
+/// =============================================================================
+/// Form Elements
+/// =============================================================================
+
+/// @name Checkbox
+///
+/// Base Component's for an switch
+///
+@mixin toggle {
+  position: relative;
+  display: inline-block;
+}
+
+@mixin slider($bg) {
+  --_primary-width: 2.875em;
+  --_primary-height: 1.5em;
+
+  position: absolute;
+  inset: 0;
+  background-color: $bg;
+  border-radius: 100vw;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+  height: var(--_primary-height);
+  width: var(--_primary-width);
+
+  /// Pseudo
+  /// This one creates the bal inside the slider
+  &::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    width: calc(min(100%, var(--_primary-height)));
+    transform: translateY(-50%);
+    height: 83%;
+    border-radius: 50%;
+    aspect-ratio: 1;
+  }
+}
+/// A awesome way to hide the checkbox
+@mixin hide-check-box {
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+
+/// @name Buttons
+///
+/// Base Component's for an buttons
+///
+
+@mixin btn {
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border: none;
+}
+
+/// Applying Button colors and border radios
+@mixin btn-props($text, $bg, $border-radius, $padding...){
+  background-color: $bg;
+  color: $text;
+  border-radius: $border-radius; 
+  padding: $padding;
 }
