--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -7,6 +7,10 @@ $font-color-label: #131022;
 /* Fonts END */
 
 
+/// Colors
+$color-primary: #6366F1; 
+$color-white: #FFFFFF;
+$color-form: #9397AD;
 
 // =============================================================================
 // Fonts
@@ -27,6 +31,34 @@ $font-weight:(
     'Bold': 700,
     'ExtraBold': 800
 );
+
+$font-sizes:(
+    't-xs': 0.75rem,
+    't-s': 0.875rem,
+    't-m': 1rem,
+    't-l': 1.125rem,
+    't-xl': 125rem,
+    't-lt': 1.5rem
+);
+$display-heading:(
+    'd-1': 5rem,
+    'd-2': 4.5rem,
+    'd-3': 4rem,
+    'd-4': 3.5rem,
+    'd-5': 3rem,
+    'd-6': 2.625em
+);
+$headings:(
+    'h-1': 2.5rem,
+    'h-2': 2rem,
+    'h-3': 1.75rem,
+    'h-4': 1.5rem,
+    'h-5': 1.25rem,
+    'h-6': 1rem
+);
+
+
+
 
 /// @name links-color
 /// Specifying Colors for all links in the website
@@ -49,9 +81,6 @@ $links-color:(
 ///   .element {
 ///     font-color: map-get($map: $links-color, $key: 'link-nav');
 ///   }
-$font-family:(
-    'link-nav' : #33354D
-);
 
 
 
@@ -132,6 +161,25 @@ $max-content-width: (
 ///   .element {
 ///     gap: map-get($map: $gaps, $key: 'g-3-1');
 ///   }
-$gaps:(
-    'g-3-1': 3.125em
+$spacing-distance:(
+    's-0-15': 0.5em,
+    's-0-56': 0.5625em,
+    's-1-1': 1em,
+    's-1-25': 1.25em,
+    's-1-87': 1.875em,
+    's-3-31': 3.125em
+);
+
+
+/// @name border-radius
+/// Border radius sizes :)
+/// @type Map
+/// @group Layout
+/// @example code-scss
+///   .element {
+///     border-radius: map-get($map: $border-radius, $key: 'p-2-2');
+///   }
+$border-radius:(
+    'r-0-2': 0.25em,
+    'r-2-2': 2.25em
 );
