--- a/src/scss/pages/_main-page.scss
+++ b/src/scss/pages/_main-page.scss
@@ -22,9 +22,8 @@
   @include a.grid-row-colum(grid, a.create-list(1fr), 3, a.$display-type, a.create-list(auto, 2fr, auto));
   height: 100dvh;
   margin: 0 auto;
-
-  font-family: a.$font-family;
-
+  /* https://sass-lang.com/documentation/style-rules/declarations/ */
+  font-family: #{meta.inspect(a.$font-family)};
 }
 
 /// =============================================================================
@@ -34,26 +33,59 @@
   /// Activate Container Query Properties for header-wrapper
   @include a.container-query-wrapper(header);
 
+  font-weight: map-get($map: a.$font-weight, $key: 'SemiBold');
   /// Content Width
   @include a.content-width(map-get($map: a.$max-content-width, $key: 'desktop'),
     map-get($map: a.$content-width-percentage, $key: 'full-width'));
-
-  /// Common Styles for the navigation
-  &__nav {
-    background-color: purple;
-    display: map-get($map: a.$display-type, $key: 'flex');
-    gap: map-get($map: a.$gaps, $key: 'g-3-1');
+  display: map-get($map: a.$display-type, $key: 'flex');
+  align-items: center;
+  height: 4.75rem;
+  
+  &__logo{
+    padding-right: map-get($map: a.$spacing-distance, $key: 's-3-31');
   }
 
-  /// Navigation
-  &__menu {
-    @include a.flex(center);
 
-    li {
+
+  /// Menu Navigation
+  &__menu {
+    /// Spacing flex more :D
+    flex: 1;
+
+    /// Navigation Items
+    &__navigation{
+      @include a.flex(center);
       list-style-type: none;
+      color: map-get($map: a.$links-color, $key: 'link-nav');
+      font-size:map-get($map: a.$font-sizes, $key: 't-m');
     }
   }
 
+  &__theme-btn-access{
+    /// Added this to align with same height
+    @include a.flex(center);
+    /// Adding some padding to span element
+    &__text-span{
+      padding-right: map-get($map: a.$spacing-distance, $key: 's-1-1');
+      color: a.$font-color-primary;
+      font-size:map-get($map: a.$font-sizes, $key: 't-m');
+      font-weight: map-get($map: a.$font-weight, $key: 'Bold');
+    }
+
+    /// Some padding Dark-mode switch
+    /// Magic Number rofl!
+    &__toggle {
+      padding-left: map-get($map: a.$spacing-distance, $key: 's-1-1');
+      line-height: 1.4em;
+    }
+
+    /// Theme Switcher Padding
+    &__btn-sign-in-up {
+      /// Some hack, took the slider distance (Theme switcher) + Padding to Sign in Button
+      /// From the Switch and got 76ox
+      margin-left: 1.875em;
+    }
+  }
 }
 
 
