Added responsive to header :), looking good

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,6 +1,7 @@
 /// =============================================================================
 /// Layout
 /// =============================================================================
+ 
 /// @name container-query-wrapper
 /// @group Layout
 ///
@@ -39,6 +40,7 @@
 /// @param {List} $gah-display-map - Contains Map for display type from vars
 /// @example code-scss
 /// @include a.grid-auto-height(grid, a.grid-add-colum(1fr), 3, a.$display-type)
+
 @mixin grid-row-colum($gah-display-type-value,
   $gah-colums,
   $grid-row-repeat,
@@ -48,6 +50,50 @@
   grid-template-columns: $gah-colums;
   grid-template-rows: $gah-row-height;
 }
+
+/// @name container-query
+/// @group Layout
+///
+/// Container Query for responsive design, we check the with of container
+/// and sending the container further, got help also from Phind for the part
+/// where #{$max -1} to avoid clipping, layout changing i mid while going to
+/// next breakpoint
+///
+/// @param {String} $container-name - The name of the container to be used in container queries
+/// @param {String} $min - Min With of container size
+/// @param {String} $max - Max With of container size, this also could be null
+/// @example code-scss
+/// Phones
+///  @include a.container-query(header,0,map-get($map: $breakpoints, $key: 'medium')){
+///    .header-navigation{
+///      background-color: red;
+///    }
+///  }
+@mixin container-query($container-name, $min, $max: null) {
+  @if $max {
+    @container #{$container-name} (min-width: #{$min}) and (max-width: #{$max - 1}) {
+      /// Passing the content further
+      @content;
+    }
+  }
+
+  @else if $min {
+    @container #{$container-name} (min-width: #{$min}) {
+      /// Passing the content further
+      @content;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
 
 /// Ai Generated from Phind
 /// @name container-query
@@ -65,21 +111,15 @@
 ///   background-color: blue;
 ///  }
 /// }
-@mixin container-query($container-name, $min, $max: null) {
-  @if $max {
-    @container #{$container-name} (min-width: #{$min}) and (max-width: #{$max - 1}) {
-      /// Passing the content further
-      @content;
-    }
-  }
 
-  @else if $min {
-    @container #{$container-name} (min-width: #{$min}) {
-      /// Passing the content further
-      @content;
-    }
-  }
+@mixin content-width($max-width, $width) {
+  max-width: $max-width;
+  margin: 0 auto;
+  width: $width;
 }
+
+
+
 
 /// @name content-width
 /// @group Layout
@@ -91,11 +131,7 @@
 /// @example code-scss
 ///   @include content-width(81.25rem, 100%)
 /// }
-@mixin content-width($max-width, $width) {
-  max-width: $max-width;
-  margin: 0 auto;
-  width: $width;
-}
+
 
 /// @name flex
 /// @group Layout
